configs/gitlab/infra/keycloak/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: keycloak
  name: keycloak
  labels:
    app: keycloak

spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      hostAliases:
      - ip: "10.0.2.2"
        hostnames:
        - "postgres.kube.local"
      - ip: "192.168.0.100"
        hostnames:
          - "argocd.kube.local"
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:19.0.2
          imagePullPolicy: IfNotPresent
          args: ["start-dev", "--db-url-host=postgres.kube.local", "--db-username=postgres", "--db-password=SomeSecurePassword", "--db=postgres"]
          ports:
          - name: http
            containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
